name:          wart
category:      wart
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Andy Sonnenburg
maintainer:    Andy Sonnenburg <andy22286@gmail.com>
stability:     experimental
homepage:      http://github.com/sonyandy/wart/
bug-reports:   http://github.com/sonyandy/wart/issues
copyright:     Copyright (C) 2013 Andy Sonnenburg
synopsis:      wart
description:   wart
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/sonyanyd/wart.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    array,
    base >= 4.4 && < 5,
    bytestring,
    containers,
    distributive,
    lca,
    lens >= 4,
    mtl,
    profunctors,
    semigroups,
    semigroupoids,
    tagged,
    text,
    transformers,
    unordered-containers
  exposed-modules:
    Language.Wart
    Language.Wart.BindingFlag
    Language.Wart.Graphic
    -- Language.Wart.CodeGen
    Language.Wart.Kind
    Language.Wart.Kind.Graphic
    Language.Wart.Kind.Syntax
    Language.Wart.Kind.Unify
    Language.Wart.Label
    -- Language.Wart.Parse
    Language.Wart.Loc
    Language.Wart.Pos
    Language.Wart.Scheme
    Language.Wart.Scheme.Graphic
    Language.Wart.Scheme.Syntax
    Language.Wart.Scheme.Unify
    Language.Wart.Syntax
    Language.Wart.Type
    Language.Wart.Type.Graphic
    Language.Wart.Type.Syntax
    Language.Wart.Type.Unify
  other-modules:
    Control.Lens.Action.Extras
    Control.Lens.Switch
    Control.Lens.Iso.Generics
    Control.Lens.Tuple.Extras
    Control.Lens.Tuple.Generics
    Control.Lens.Tuple.Internal
    Control.Lens.Union
    Control.Lens.Union.Generics
    Control.Monad.Extras
    Control.Monad.ST.Class
    Control.Monad.Supply
    Control.Monad.Supply.Class
    Control.Monad.Trans.Supply
    Control.Monad.UnionFind
    Control.Monad.UnionFind.Class
    Control.Monad.UnionFind.ST
    Data.Bag
    Data.STIntRef
    Data.Stream
    GHC.Generics.Lens.Extras
    Language.Wart.Lex
    Language.Wart.Parser
    Language.Wart.Token
    Type.Nat

executable wartc
  hs-source-dirs: tools
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >= 4.4 && < 5,
    wart
  main-is: wartc.hs

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  default-language: Haskell2010
  build-depends:
    base,
    hlint >= 1.7
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if impl(ghc < 7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc < 7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
